# pyFM

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README.md  api.html  example_notebook.ipynb  examples.html  genindex.html  getting_started.html  index.html  install.html  mesh.py  objects.inv  py-modindex.html  requirements.txt  requirements_docs.txt  search.html  searchindex.js  setup.cfg  setup.py  signatures.py  tools.py
.doctrees/: api.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  install.doctree
.github/workflows/: documentation.yml  test_and_deploy.yml
_sources/: api.rst.txt  install.md.txt
data/: landmarks.txt
docs/source/: conf.py  examples.md  index.rst
examples/data/: lion-00.off  lion2cat
examples/functional_map_network/: FMN_base.ipynb
examples/mesh_and_matching/: basic_functions.ipynb  matching_with_zoomout.ipynb
pyFM/: fem_laplacian.py  file_utils.py  functional.py  mesh.py  refine.py  spectral.py  tools.py
pyFM/FMN/: FMN.py  __init__.py
pyFM/eval/: evaluate.py
pyFM/file_utils/: __init__.py  file_reading.py  file_writing.py
pyFM/mesh/: __init__.py  file_utils.py  geometry.py  laplacian.py  operators.py  trimesh.py
pyFM/optimize/: __init__.py  base_functions.py
pyFM/refine/: __init__.py  icp.py  zoomout.py
pyFM/signatures/: HKS_functions.py  WKS_functions.py  __init__.py
pyFM/spectral/: __init__.py  convert.py  nn_utils.py  precise_map.py  projection_utils.py  shape_difference.py
pyFM/tests/: test_data.py
pyFM/utils/: fem_laplacian.py  spectral.py  tools.py
(+40 files in other folders)
