[metadata]
name = pyfmaps
version = 1.0.1
description = Python bindings for functional maps
long_description = file: README.md
long_description_content_type = text/markdown
author = Robin Magnet
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/RobinMagnet/pyFM/issues
    Documentation = https://github.com/RobinMagnet/pyFM/blob/master/example_notebook.ipynb
    Source Code = https://github.com/RobinMagnet/pyFM
    User Support = https://github.com/RobinMagnet/pyFM/issues

[options]
packages = find:
install_requires =
    numpy
    scipy
    potpourri3d
    robust_laplacian
    tqdm
    scikit-learn
python_requires = >=3.7
include_package_data = True

